fix: header overflow

--- a/frontend/desktop/assets/stylesheet/classes.scss
+++ b/frontend/desktop/assets/stylesheet/classes.scss
@@ -131,8 +131,8 @@
 
 .abs {
   position: absolute;
-  bottom: 0;
-  right: 0;
+  height: 100%;
+  width: 100%;
   left: 0;
   top: 0;
 }
